# dagcmp

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/dagcmp/: Cargo.toml
crates/dagcmp-core/: Cargo.toml
crates/dagcmp-core/src/: compare.rs  lib.rs  model.rs  sync.rs
crates/dagcmp-core/src/scan/: mft.rs  mod.rs  walk.rs
crates/dagcmp-gui/: Cargo.toml
crates/dagcmp-gui/src/: main.rs
crates/dagcmp/src/: main.rs
docs/: DESIGN.md
