[workspace]
resolver = "2"
members = [
    "crates/dagcmp-core",
    "crates/dagcmp",
    "crates/dagcmp-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Erik Larsen <erik.3d.pixel@gmail.com>"]
repository = "https://github.com/erik-larsen/dagcmp"

[profile.release]
lto = "thin"
codegen-units = 1
