[package]
name = "dagcmp-core"
description = "Scanning, compare and sync engine for dagcmp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
ntfs-reader = "0.4"
